* Changelog
I hope the current card / log format is flexible enough to accommodate
upcoming changes.

In case a update to the org sources is needed, I'll add a changelog
entry with updating instructions.

** [2020-07-02 Thu]
*** Changed
- ~org-fc-review-rate-card~ was renamed to ~org-fc-review-rate~
** [2020-07-01 Wed]
*** Changed
- The review history file is only written once per review,
  as a first step towards implementing a "undo-rating" command
** [2020-06-29 Mon]
*** Added
- Shuffling of positions for the review can be disabled
  by setting ~org-fc-shuffle-positions~ to ~nil~
*** Changed
- Error messages from shell commands are promoted
** [2020-06-28 Sun]
*** Added
- ~org-fc-before-review-hook~ that runs when a review session is started
** [2020-06-26 Fri]
*** Changed
- Messages are not inhibited during review
- Whitelisted drawers are expanded during review
*** Added
- A ~org-fc-after-review-hook~ that runs when the review ends / is quit
- ~org-fc-keymap-hint~ extension
- ~org-fc-audio~ extension
** [2020-06-25 Thu]
*** Added
- ~SCHEDULED: ...~, ~DEADLINE: ...~ timestamps are hidden during
  review
- Drawers in ~org-fc-drawer-whitelist~ are not hidden during review
*** Changed
- During the review process, two minor modes are used instead of two
  hydras
** [2020-05-24 Sun]
*** Changed
- Include file information in card index
- Maintain order of positions in a card when shuffling
** [2020-05-22 Fri]
*** Changed
- Exit hydra when review is started
** [2020-05-08 Fri]
*** Changed
- Per-context dashboard
- Improve org-indent of cards
- Use special "fc-demo" tag for demo cards
- Move opening of flip/rating hydras to main review loop
** [2020-05-01 Fri]
*** Internal
The AWK scripts now generate S-expressions instead of CSV tables, this
way ~read~ can be used to parse the data instead of relying on a set
of custom parsing functions.

This also allows passing more complex data structures from AWK to
org-fc.
** [2020-04-29 Wed]